--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "private": true,
   "scripts": {
     "copy-ckeditor": "rm -rf ./js/* && cp -r ../ckeditor5/packages/ckeditor5-build-decoupled-document/build/* ./js",
-    "build-css-dev": "postcss tailwind.css -o css/tailwind.css",
-    "build-css": "postcss tailwind.css -o css/tailwind.css --env production",
+    "build-css": "npx tailwindcss -c tailwind.config.js -i tailwind.css -o css/tailwind.css",
     "start": "live-server --ignore=node_modules,.git --no-browser"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.5",
-    "live-server": "^1.2.1",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.1.1"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "live-server": "^1.2.2",
+    "tailwindcss": "^3.1.8"
   }
 }
