--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
-    "live-server": "^1.2.2",
+    "live-server": "git+https://github.com/tapio/live-server.git#ad22544",
     "tailwindcss": "^3.1.8"
   }
 }
